--- a/index.html
+++ b/index.html
@@ -35,15 +35,20 @@
 
         <button onclick="createLine(undefined,undefined,this.previousElementSibling.value)" class="btn-add-text">
           +</button>
-
         <button onclick="moveLineUp()" class="btn-move-line-up">˄</button>
         <button onclick="moveLineDown()" class="btn-move-line-down">˅</button>
-        <button onclick="selectPrevLine()" class="btn-select-next-line">Select Prev</button>
-        <button onclick="selectNextLine()" class="btn-select-next-line">Select Prev</button>
+
+        <button onclick="selectPrevLine()" class="btn-select-prev-line">Select Prev</button>
+        <button onclick="selectNextLine()" class="btn-select-next-line">Select Next</button>
+
+
+
         <select name="selectShape" id="" onchange="onSelectShape(this.value)">
           <option value="text">Text</option>
           <option value="line">Line</option>
         </select>
+        <button onclick="moveLineLeft()" class="btn-move-line-Left">˂</button>
+        <button onclick="moveLineRight()" class="btn-move-line-right">˃</button>
         <input class="color-selector" type="color" oninput="changeColor(this.value) " value="black" />
         <label for="font">Enter a font</label>
         <input class="font" type="text" name="font" id="font" placeholder="font" class="font" value="impact" />
