--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body onload="onInit()">
   <nav class="main-menu flex space-around align-center">
-    <h3>Painter</h3>
+    <h3>Meme Generator</h3>
     <ul class="main-menu-nav clean-list ">
       <a href="#" onclick="showClickedPage('gallery')" class="link-memes">Memes</a>
       <a href="#" onclick="showClickedPage('generator')" class="link-generator">Generator</a>
@@ -28,8 +28,6 @@
 
       <section class="input-panel grid col-5 row-6">
 
-        <!-- <form onsubmit="createLine(undefined,undefined,this.value)" class="txt-inputs-container"> -->
-        <!-- <label for="txt">Enter a txt</label> -->
         <input class="txt input-panel-cell full " oninput=" drawTextOnInput(this.value)" type="text" name="txt" id="txt"
           placeholder="txt" class="txt" />
 
@@ -41,29 +39,21 @@
         <button onclick="selectPrevLine()" class="btn-select-prev-line">Select Prev</button>
         <button onclick="selectNextLine()" class="btn-select-next-line">Select Next</button>
 
-
-        <!-- 
-        <select name="selectShape" id="" onchange="onSelectShape(this.value)">
-          <option value="text">Text</option>
-          <option value="line">Line</option>
-        </select> -->
         <input class="color-selector" type="color" oninput="changeColor(this.value) " value="black" />
         <button onclick="moveLine('left')" class="btn-move-line-Left">˂</button>
         <button onclick="moveLine('right')" class="btn-move-line-right">˃</button>
-        <!-- <label for="font">Enter a font</label> -->
         <input class="font" type="text" name="font" id="font" placeholder="font" class="font" value="impact" />
-        <!-- <label for="font-size">Enter a font size</label> -->
         <input class="font-size " type="number" name="font-size" id="font-size" placeholder="font-size"
           class="font-size" value="16" />
         </form>
 
         <button class="btn" onclick="onUploadImg()">Share</button>
-
         <button onclick="saveCanvas()">Save</button>
         <button onclick="clearCanvas(true)">Clear</button>
-        <!-- when click the link run downloadCanvas -->
+
         <a href="#" onclick="downloadCanvas(this)" download="file-name">Download</a>
         <input type="file" class="file-input btn" name="image" onchange="onImgInput(event)" />
+
       </section>
   </div>
   <div class="gallery-page" hidden>
