Added DeleteLastLine functionallity

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <input class="txt input-panel-cell full " oninput=" drawTextOnInput(this.value)" type="text" name="txt" id="txt"
           placeholder="txt" class="txt" />
 
-        <button onclick="createLine(undefined,undefined,this.previousElementSibling.value)" class="btn-add-text">
-          +</button>
+        <button onclick="createLine(undefined,undefined,this.previousElementSibling.value)"
+          class="btn-add-text">+</button>
         <button onclick="moveLine('up')" class="btn-move-line-up">˄</button>
         <button onclick="moveLine('down')" class="btn-move-line-down">˅</button>
 
