--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <input class="color-selector" type="color" oninput="changeColor(this.value) " value="black" />
         <button onclick="moveLine('left')" class="btn-move-line-Left">˂</button>
         <button onclick="moveLine('right')" class="btn-move-line-right">˃</button>
-        <input class="font" type="text" name="font" id="font" placeholder="font" class="font" value="impact" />
+        <input class="font" type="text" name="font" id="font" placeholder="font" class="font" value="Impact" />
         <input class="font-size " type="number" name="font-size" id="font-size" placeholder="font-size"
           class="font-size" value="16" />
         </form>
