--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
     <main class="main-content-container grid">
       <div class="canvas-container">
-        <canvas id="my-canvas" width="400" height="400" style="outline: 1px solid green"></canvas>
+        <canvas id="my-canvas" width="400" height="400"
+          style="outline: 3px solid rgb(53, 0, 128); border-radius: 6px;"></canvas>
       </div>
 
       <section class="input-panel grid col-5 row-6">
@@ -92,9 +93,6 @@
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi vitae, deserunt quaerat, rerum error tenetur
         cum, inventore omnis soluta odit et suscipit atque adipisci voluptas doloribus ipsa voluptate maiores ex?</p>
     </div>
-
-
-
 
   </div>
 
