General code cleanup

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
       <section class="input-panel grid col-5 row-6">
 
-        <input class="txt input-panel-cell full " oninput=" drawTextOnInput(this.value)" type="text" name="txt" id="txt"
-          placeholder="txt" class="txt" />
+        <input class="txt input-panel-cell full " oninput=" onDrawTextOnInput(this.value)" type="text" name="txt"
+          id="txt" placeholder="txt" class="txt" />
 
         <button onclick="onClickedAddLine(undefined,undefined,this.previousElementSibling.value)"
           class="btn-add-text">+</button>
