--- a/index.html
+++ b/index.html
@@ -31,30 +31,25 @@
 
         <input class="txt input-panel-cell full " oninput="onChangedLineText()" type="text" name="txt" id="txt"
           placeholder="txt" class="txt" />
-
         <button onclick="onClickedAddLine(this.previousElementSibling.value)" class="btn-add-text">+</button>
         <button onclick="onClickedMoveLine('up')" class="btn-move-line-up">˄</button>
         <button onclick="onClickedMoveLine('down')" class="btn-move-line-down">˅</button>
-
         <button onclick="onClickedSelectPrevLine()" class="btn-select-prev-line">Select Prev</button>
         <button onclick="onClickedSelectNextLine()" class="btn-select-next-line">Select Next</button>
-
         <input class="color-selector" type="color" oninput="onChangeColor(this.value) " value="black" />
         <button onclick="onClickedMoveLine('left')" class="btn-move-line-Left">˂</button>
         <button onclick="onClickedMoveLine('right')" class="btn-move-line-right">˃</button>
-        <input class="font" type="text" name="font" id="font" placeholder="font" class="font" value="Impact" />
-        <input oninput="onChangedFontSize(this.value)" class="font-size " type="number" name="font-size" id="font-size"
+        <input onchange="onChangedFont()" class="font" type="text" name="font" id="font" placeholder="font" class="font"
+          value="Impact" />
+        <input oninput="onChangedFontSize()" class="font-size " type="number" name="font-size" id="font-size"
           placeholder="font-size" class="font-size" value="22" />
-        </form>
-
         <button class="btn" onclick="onUploadImg()">Share</button>
         <button onclick="saveCanvas()">Save</button>
         <button onclick="clearCanvas(true)">Clear</button>
-
         <a href="#" onclick="downloadCanvas(this)" download="file-name">Download</a>
         <input type="file" class="file-input btn" name="image" onchange="onImgInput(event)" />
-
       </section>
+
   </div>
   <div class="gallery-page" hidden>
     <div class="gallery-container grid col-4">
