--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
         <input class="txt input-panel-cell full " oninput="onChangedLineText()" type="text" name="txt" id="txt"
           placeholder="txt" class="txt" />
-        <button onclick="onClickedAddLine(this.previousElementSibling.value)" class="btn-add-text">+</button>
+        <button onclick="onClickedAddLine()" class="btn-add-text">+</button>
         <button onclick="onClickedMoveLine('up')" class="btn-move-line-up">˄</button>
         <button onclick="onClickedMoveLine('down')" class="btn-move-line-down">˅</button>
         <button onclick="onClickedSelectPrevLine()" class="btn-select-prev-line">Select Prev</button>
         <button onclick="onClickedSelectNextLine()" class="btn-select-next-line">Select Next</button>
-        <input class="color-selector" type="color" oninput="onChangeColor(this.value) " value="black" />
+        <input class="color-selector" type="color" oninput="onChangeColor(this.value) " value="purple" />
         <button onclick="onClickedMoveLine('left')" class="btn-move-line-Left">˂</button>
         <button onclick="onClickedMoveLine('right')" class="btn-move-line-right">˃</button>
         <input onchange="onChangedFont()" class="font" type="text" name="font" id="font" placeholder="font" class="font"
