Gallery imgs now generate dinamicaly via service

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <section class="input-panel grid col-5 row-6">
 
-        <input class="txt input-panel-cell full " oninput="onChangedLineText()" type="text" name="txt" id="txt"
+        <input type="search" class="txt full " oninput="onChangedLineText()" type="text" name="txt" id="txt"
           placeholder="txt" class="txt" />
         <button onclick="onClickedAddLine()" class="btn-add-text">+</button>
         <button onclick="onClickedMoveLine('up')" class="btn-move-line-up">˄</button>
@@ -60,7 +60,7 @@
   </div>
   <div class="gallery-page" hidden>
     <div class="gallery-container grid col-4">
-      <img onclick="renderImg(this),showClickedPage('generator')" src="img/meme-imgs (square)/1.jpg" alt="">
+      <!-- <img onclick="renderImg(this),showClickedPage('generator')" src="img/meme-imgs (square)/1.jpg" alt="">
       <img onclick="renderImg(this),showClickedPage('generator')" src="img/meme-imgs (square)/2.jpg" alt="">
       <img onclick="renderImg(this),showClickedPage('generator')" src="img/meme-imgs (square)/3.jpg" alt="">
       <img onclick="renderImg(this),showClickedPage('generator')" src="img/meme-imgs (square)/4.jpg" alt="">
@@ -77,11 +77,12 @@
       <img onclick="renderImg(this),showClickedPage('generator')" src="img/meme-imgs (square)/15.jpg" alt="">
       <img onclick="renderImg(this),showClickedPage('generator')" src="img/meme-imgs (square)/16.jpg" alt="">
       <img onclick="renderImg(this),showClickedPage('generator')" src="img/meme-imgs (square)/17.jpg" alt="">
-      <img onclick="renderImg(this),showClickedPage('generator')" src="img/meme-imgs (square)/18.jpg" alt="">
+      <img onclick="renderImg(this),showClickedPage('generator')" src="img/meme-imgs (square)/18.jpg" alt=""> -->
     </div>
   </div>
 
   <div class="about-page" hidden>
+    <div class="keywords-container"></div>
     <div class="content-container grid col-2 row-2">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos perspiciatis suscipit, recusandae ex dolorum
         accusantium quos quaerat natus libero voluptates nam dolores illo, laboriosam quia nostrum inventore nobis sunt
