Canvas now retains size and position better

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <nav class="main-nav clean-list">
         <ul class="main-menu clean-list flex">
           <a href="#" onclick="showClickedPage('gallery')" class="link-memes">Memes </a>
-          <a href="#" onclick="showClickedPage('generator')" class="link-generator">Generator </a>
           <a href="#" onclick="showClickedPage('about')" class="link-about">About </a>
         </ul>
       </nav>
@@ -40,7 +39,7 @@
     <main class="main-content-container grid">
       <div class="canvas-container">
         <canvas id="my-canvas" width="400" height="400"
-          style="outline: 3px solid rgb(53, 0, 128); border-radius: 6px;"></canvas>
+          style="outline: 3px solid rgb(53, 0, 128); border-radius: 6px; margin: auto;"></canvas>
       </div>
 
       <section class="input-panel grid col-5 row-6">
